# Simulador-melhor-carro

./: .gitignore  CMakeLists.txt  README.md  setup.sh
src/: AlgoritmoEvolutivo.cpp  AlgoritmoEvolutivo.h  Carro.cpp  Carro.h  Config.h  Genoma.h  Pista.cpp  Pista.h  Simulacao.cpp  Simulacao.h  UIManager.cpp  UIManager.h  main.cpp
